[package]
name = "sgb_wrobel"
version = "0.1.1"
authors = ["grzesiek.bylica@small-software.com"]
edition = "2021"
description = "A library with collection of components for yew https://small-software.com"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
