[package]
name = "sgb_wrobel"
version = "0.1.15"
authors = ["grzesiek.bylica@small-software.com"]
edition = "2021"
description = "A library with collection of components for yew https://small-software.com"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stylist = { version="0.12.0", features=["yew_integration"]}
yew = { version="0.20.0", features=["csr"] }
#console_error_panic_hook = "0.1.7"
#console_log = "0.2.0"
#log = "0.4.17"

[profile.release]
strip = true         # automatically strip symbols from the binary # warning need disable for bloat
opt-level = "s"      # Optimize for size
lto = true           # Enable link time optimization
codegen-units = 1    # Maximize size reduction optimization

